Can now edit Author data

--- a/templates/views/admin/elearningVisit_profile.jade
+++ b/templates/views/admin/elearningVisit_profile.jade
@@ -27,6 +27,9 @@ block content
                 .col-md-3
                     label Date Viewed
                     input.form-control(type='date', value=data.elearning_visits.dateViewed)
+                .col-md-3
+                    label Time Viewed
+                    input.form-control(type='time')
             .row
                 .col-md-3.col-md-offset-1
                     .checkbox
