--- a/templates/views/admin/authors_profile.jade
+++ b/templates/views/admin/authors_profile.jade
@@ -4,14 +4,15 @@ block content
     .row
         .col-sm-9.col-sm-offset-3.col-md-9.col-md-offset-3.main
             h3 #{data.authors._id}
-            form.form-group.row(method='post')
+            form.form-group.row(method='post', action='/admin/authors/'+data.authors._id)
+                input(type='hidden', name='action', value='editAuthor')
                 .row
                     .col-md-7
-                        input.form-control.input-lg(type='text', value= data.authors.name, placeholder='Name')
+                        input.form-control.input-lg(type='text', value= data.authors.name, placeholder='Name',name='name')
                 h5.help-block #{'Key: '+data.authors.key}
                 h5.help-block #{'ID: '+data.authors._id}
                 .row
                     .col-md-7
                         label Organization
-                        input.form-control(type='text', value= data.authors.organization, placeholder='Organization')
-                button.btn.btn-primary(type='submit') Save   
+                        input.form-control(type='text', value= data.authors.organization, placeholder='Organization', name='organization')
+                button.btn.btn-primary(type='submit', name='editAuthor') Save   
