--- a/templates/views/admin/learningObjects_profile.jade
+++ b/templates/views/admin/learningObjects_profile.jade
@@ -3,11 +3,11 @@ extends ../../layouts/admin-default
 block content
     .row
         .col-sm-9.col-sm-offset-3.col-md-9.col-md-offset-3.main
-            form.form-group.row(method='post')
-                input(type='hidden', name= 'action', value='editLO')
+            form.form-group.row(method='post',action='/admin/learning-objects/'+data.learning_objects._id)
+                input(type='hidden', name='action', value='editLearningObject')
                 form.form-group.row
                     .col-md-7
-                        input.form-control.input-lg(type='text', value= data.learning_objects.title, placeholder='Title')
+                        input.form-control.input-lg(type='text', value= data.learning_objects.title, placeholder='Title', name='title')
                 h5.help-block #{'ID: '+data.learning_objects._id}
                 .row
                     .col-md-7
@@ -24,11 +24,11 @@ block content
                 .row
                     .col-md-7
                         label One-paragraph Description
-                        textarea.form-control(rows='4') #{data.learning_objects.content.brief}
+                        textarea.form-control(rows='4', name='brief') #{data.learning_objects.content.brief}
                 .row
                     .col-md-7
                         label Full Description
-                        textarea.form-control(rows='15') #{data.learning_objects.content.extended}
+                        textarea.form-control(rows='15', name='extended') #{data.learning_objects.content.extended}
                 h4
                     label Meta
                 .row
@@ -45,4 +45,4 @@ block content
                         label Updated At
                     .col-md-2
                         mark #{data.learning_objects.publishedAt}
-                button.btn.btn-primary(type='submit') Save
+                button.btn.btn-primary(type='submit', name='editLearningObject') Save
