fixed publication feedback page

--- a/templates/views/admin/publications.jade
+++ b/templates/views/admin/publications.jade
@@ -78,7 +78,7 @@ block content
                         h3 No Publication Line
                         button Create Publication Line
             if data.path === '/admin/publication-feedbacks'
-                if data.publication_feedback.length > 0
+                if data.publication_feedbacks.length > 0
                     .row
                         .col-md-6
                             input.form-control(type='text', placeholder='Search..')
