--- a/templates/views/admin/publications.jade
+++ b/templates/views/admin/publications.jade
@@ -76,7 +76,7 @@ block content
                 else
                     .jumbotron
                         h3 No Publication Line
-                        button Create Publication Line
+                        button.btn.btn-success Create Publication Line
             if data.path === '/admin/publication-feedbacks'
                 if data.publication_feedbacks.length > 0
                     .row
