can delete elearning data

--- a/templates/views/admin/courses_profile.jade
+++ b/templates/views/admin/courses_profile.jade
@@ -46,3 +46,6 @@ block content
                     .col-md-2
                         mark #{data.courses.publishedAt}
                 button.btn.btn-primary(type='submit') Save
+            form.form-group.row(method='post', action='/admin/courses/'+data.courses._id)
+                input(type='hidden', name='action', value='deleteCourse')
+                button.btn.btn-link(type='submit', name='deleteCourse') Delete Course
