--- a/templates/views/admin/learningContent_profile.jade
+++ b/templates/views/admin/learningContent_profile.jade
@@ -46,3 +46,6 @@ block content
                     .col-md-2
                         mark #{data.learning_contents.publishedAt}
                 button.btn.btn-primary(type='submit') Save
+            form.form-group.row(method='post', action='/admin/learning-contents/'+data.learning_contents._id)
+                input(type='hidden', name='action', value='deleteLearningContent')
+                button.btn.btn-link(type='submit', name='deleteLearningContent') Delete Learning Content
