--- a/templates/views/admin/lindustries_profile.jade
+++ b/templates/views/admin/lindustries_profile.jade
@@ -9,4 +9,7 @@ block content
                         input.form-control.input-lg(type='text', value= data.lindustries.name, placeholder='Name')
                 h5.help-block #{'Key: ' + data.lindustries.key}
                 h5.help-block #{'ID: ' + data.lindustries._id}
-                button.btn.btn-primary(type='submit') Save   
+                button.btn.btn-primary(type='submit') Save
+            form.form-group.row(method='post', action='/admin/lindustries/'+data.lindustries._id)
+                input(type='hidden', name='action', value='deleteLIndustry')
+                button.btn.btn-link(type='submit', name='deleteLIndustry') Delete LIndustry
